=======
CHANGES
=======

0.5.0
-----

* changed sample table format to single rows per sample
* updates to GUI
* fixes to RD analysis

0.4.0
-----

* changes to output files, snps and indels now output
* snps file made after filtering of calls
* make tree with snp branch lengths
* can save unmapped reads

0.3.0
-----

* can mask sites with bed file
* fix to use only core snps
* can remove uninformative sites from core
* can create qc report from cmd line
* more preset preset genomes
* can select species at command line
* added subread aligner
* map view for gui
* gui tree viewer
* spoligotyping tool to gui
* find heterozygous sites
* plot snp matrix
* changed name to snipgenie

0.2.0
-----

* improved vcf to fasta sites method
* renamed to snpgenie
* use genbank as annotation file
* added proximity filter
* GUI works for any ref genome
* text bam alignment viewer
* add folders in gui
* clean up files option
* fastq quality report

0.1.0
-----

* first version
* CLI workflow works for general microbial genomes
* GUI works for mbovis so far
* functions working so far: trimming, alignment, variant calling, snp matrix, tree building